fix(page): gap between cards
updated gap between components

--- a/catagram_frontend/src/app/pages/diagram-page/diagram-page.component.css
+++ b/catagram_frontend/src/app/pages/diagram-page/diagram-page.component.css
@@ -23,6 +23,7 @@ app-search-bar {
 .cards-type-container {
     display: flex;
     flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .card-container {
@@ -42,7 +43,7 @@ h3 {
 }
 
 @media(min-width: 769px) {
-    .cards-container {
+    .cards-type-container {
         gap: 2rem;
     }
 }
